--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <h1>Orbit Report</h1>
 
 <div>
-	<app-orbit-list></app-orbit-list>
+	<app-orbit-list [satellites]="displayList"></app-orbit-list>
 </div>
 
 <div class="search-form">
@@ -9,4 +9,6 @@
 	<button (click)="search(searchTerm.value);">Search</button>
 </div>
 
-<app-orbit-counts [satellites]="displayList"></app-orbit-counts>
+<app-orbit-counts [satellites]="displayList">
+	<link rel="import" href="./orbit-list/orbit-list.component.html">
+</app-orbit-counts>
